# spell-checker

./: .gitignore  README.md  pyproject.toml  tasks.py
data/: wiktionary-40k.txt
documentation/: implementation.md  requirements-specification.md  test-docs.md  user-docs.md  weekly-report-1.md  weekly-report-2.md  weekly-report-3.md  weekly-report-4.md  weekly-report-5.md  weekly-report-6.md
src/: main.py
src/algorithms/: damerau_levenshtein.py
src/data_structures/trie/: trie.py  trie_node.py
src/services/: check_spelling_service.py  suggest_spelling_service.py
src/tests/algorithms/: damerau_levenshtein_test.py
src/tests/data/: test_file.txt
src/tests/data_structures/trie/: trie_test.py
src/tests/services/: check_spelling_service_test.py  mock_damerau_levenshtein.py  mock_trie.py  suggest_spelling_service_test.py
src/ui/: ui.py
