[tool.poetry]
name = "spell-checker"
version = "0.1.0"
description = ""
authors = ["tovento <92781588+tovento@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "spell_checker"}]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^2.0.0"
pytest = "^7.2.1"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.10"
coverage = "^7.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
